[package]
name = "btc_ordinal_analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##reqwest = "0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
bs58 = "0.4"
tokio = { version = "1.35", features = ["full"] }
bitcoincore-rpc = "0.18"
hyper = { version = "0.14.28", features = [] }
hyper-tls = "0.5.0"

actix-rt = "2"
actix-web = "3"
reqwest = { version = "0.11", features = ["json"] }

